fix disappearing headers on smaller viewports

--- a/public/stylesheets/runspool.css
+++ b/public/stylesheets/runspool.css
@@ -1,12 +1,8 @@
 /* Prevent nav from overlapping rest of page */
 body {
-    padding-top: 50px;
+    padding-top:50px;
 }
-@media (max-width: 979px) {
-    body {
-        padding-top: 0px;
-    }
-}
+
 
 /* Entries page */
 input#quantity {
